--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="ja">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UF-8">
-	<title>tomo,s OSダウンロード</title>
+	<title>Header ダウンロード</title>
 	<link rel="shortcut icon" href="favicon3.ico">
 <link rel="apple-touch-icon" href="apple-touch-icon2.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body>
-<h2><p align="center"><br>tomo,s OS Download</p></h2>
+<h2><p align="center"><br>Header Download</p></h2>
 <p align="center"><b>{注意！}</b>
 <br><b><span style="color: #FF0000;">改造や二次配布は厳禁です。発見された場合は,それなりの覚悟を決めて下さい。</span></b></p>
 <p align="center"><b>tomo,s OS Download link↓↓</b></p>
