--- a/kiyaku.html
+++ b/kiyaku.html
@@ -18,7 +18,7 @@
 三、改造をして公式を偽りウイルスが入ったなど<br>
 　　は保障などはせず、受付もいたしません。<br>
 　　以上の利用規約を守りお使いください。<br><br>
-    <p align="center"><a class="customs_button" href="https://github.com/tmimiyan/Headers/Change log"><input type="button" name="" value="　同　意　"></a>
+    <p align="center"><a class="customs_button" href="https://github.com/tmimiyan/Headers/tree/main/Change%20log"><input type="button" name="" value="　同　意　"></a>
     <a class="customs_button" href="https://tmimiyan.github.io/Headers"><input type="button" name="" value="同意しない"></a>
 </p>
 
